# shared-submit-interface

./: .gitignore  LICENSE  MANIFEST.in  Makefile.am  README.md  configure.ac  pyproject.toml.in  requirements.txt
doc/: Makefile.am  introduction.tex  knowledge-graph.tex  references.bib  shared-submit-interface.tex  ssi.sty.in
etc/: shared-submit-interface.service  shared-submit-interface.xml
rpmbuild/SPECS/: shared-submit-interface.spec.in
src/: Makefile.am
src/shared_submit_interface/: convenience.py  database.py  formatter.py  rdf.py  ui.py  validator.py  wsgi.py
src/shared_submit_interface/resources/html_templates/: 403.html  404.html  edit-dataset.html  home.html  layout.html  my-datasets.html
src/shared_submit_interface/resources/sparql_templates/: account_by_email.sparql  account_by_session_token.sparql  account_sessions.sparql  accounts.sparql  datasets.sparql  datatypes.sparql  delete_inactive_session_by_uuid.sparql  delete_session.sparql  delete_session_by_uuid.sparql  delete_sessions.sparql  is_initialized.sparql  organizations.sparql  prefixes.sparql  recommend_data_repository.sparql  research_domains.sparql  update_dataset.sparql  update_session.sparql
src/shared_submit_interface/resources/static/css/: form.css  main.css
src/shared_submit_interface/resources/static/js/: edit-dataset.js
