AUTOMAKE_OPTIONS        = subdir-objects

PYTHON_FILES =                                                                   \
    shared_submit_interface/__init__.py                                          \
    shared_submit_interface/ui.py                                                \
    shared_submit_interface/convenience.py                                       \
    shared_submit_interface/rdf.py                                               \
    shared_submit_interface/cache.py                                             \
    shared_submit_interface/database.py                                          \
    shared_submit_interface/wsgi.py

EXTRA_RESOURCES =                                                                \
    shared_submit_interface/web/resources/html_templates/400.html                \
    shared_submit_interface/web/resources/html_templates/403.html                \
    shared_submit_interface/web/resources/html_templates/404.html                \
    shared_submit_interface/web/resources/html_templates/410.html                \
    shared_submit_interface/web/resources/html_templates/layout.html             \
    shared_submit_interface/web/resources/html_templates/edit-dataset.html       \
    shared_submit_interface/web/resources/html_templates/home.html               \
    shared_submit_interface/web/resources/robots.txt                             \
    shared_submit_interface/web/resources/static/fonts/FiraMono-Regular.ttf      \
    shared_submit_interface/web/resources/static/fonts/SourceSansPro-Bold.ttf    \
    shared_submit_interface/web/resources/static/fonts/SourceSansPro-Italic.ttf  \
    shared_submit_interface/web/resources/static/fonts/SourceSansPro-Regular.ttf \
    shared_submit_interface/web/resources/static/images/loader.svg               \
    shared_submit_interface/web/resources/static/images/logo-4tu.svg             \
    shared_submit_interface/web/resources/static/images/logo-dans.svg            \
    shared_submit_interface/web/resources/static/js/jquery-3.7.1.min.js

EXTRA_DIST = $(PYTHON_FILES) $(EXTRA_RESOURCES)
