AUTOMAKE_OPTIONS        = subdir-objects

PYTHON_FILES =                                                                   \
    shared_submit_interface/__init__.py                                          \
    shared_submit_interface/ui.py                                                \
    shared_submit_interface/cache.py                                             \
    shared_submit_interface/convenience.py                                       \
    shared_submit_interface/database.py                                          \
    shared_submit_interface/formatter.py                                         \
    shared_submit_interface/rdf.py                                               \
    shared_submit_interface/wsgi.py

EXTRA_RESOURCES =                                                                \
    shared_submit_interface/resources/html_templates/400.html                    \
    shared_submit_interface/resources/html_templates/403.html                    \
    shared_submit_interface/resources/html_templates/404.html                    \
    shared_submit_interface/resources/html_templates/410.html                    \
    shared_submit_interface/resources/html_templates/edit-dataset.html           \
    shared_submit_interface/resources/html_templates/home.html                   \
    shared_submit_interface/resources/html_templates/layout.html                 \
    shared_submit_interface/resources/html_templates/my-datasets.html            \
    shared_submit_interface/resources/robots.txt                                 \
    shared_submit_interface/resources/sparql_templates/account_by_email.sparql   \
    shared_submit_interface/resources/sparql_templates/account_by_session_token.sparql \
    shared_submit_interface/resources/sparql_templates/account_sessions.sparql   \
    shared_submit_interface/resources/sparql_templates/accounts.sparql           \
    shared_submit_interface/resources/sparql_templates/datasets.sparql           \
    shared_submit_interface/resources/sparql_templates/delete_inactive_session_by_uuid.sparql \
    shared_submit_interface/resources/sparql_templates/delete_session.sparql     \
    shared_submit_interface/resources/sparql_templates/delete_session_by_uuid.sparql \
    shared_submit_interface/resources/sparql_templates/delete_sessions.sparql    \
    shared_submit_interface/resources/sparql_templates/is_initialized.sparql     \
    shared_submit_interface/resources/sparql_templates/organizations.sparql      \
    shared_submit_interface/resources/sparql_templates/prefixes.sparql           \
    shared_submit_interface/resources/sparql_templates/research_domains.sparql   \
    shared_submit_interface/resources/sparql_templates/update_dataset.sparql     \
    shared_submit_interface/resources/sparql_templates/update_session.sparql     \
    shared_submit_interface/resources/static/fonts/FiraMono-Regular.ttf          \
    shared_submit_interface/resources/static/fonts/SourceSansPro-Bold.ttf        \
    shared_submit_interface/resources/static/fonts/SourceSansPro-Italic.ttf      \
    shared_submit_interface/resources/static/fonts/SourceSansPro-Regular.ttf     \
    shared_submit_interface/resources/static/images/loader.svg                   \
    shared_submit_interface/resources/static/images/logo-4tu.svg                 \
    shared_submit_interface/resources/static/images/logo-dans.svg                \
    shared_submit_interface/resources/static/js/edit-dataset.js                  \
    shared_submit_interface/resources/static/js/jquery-3.7.1.min.js

EXTRA_DIST = $(PYTHON_FILES) $(EXTRA_RESOURCES)
